--- a/source/_sass/_map.scss
+++ b/source/_sass/_map.scss
@@ -5,7 +5,7 @@
   @include breakpoint($medium-up) { top: 9vw; }
   top: 31vh;
   left: 0;
-  z-index: 0;
+  z-index: -1;
   text-align: center;
   
   svg {
@@ -19,9 +19,9 @@
     
     .js-map--on,
     path:hover { 
-      fill: $yellow;
+      fill: $accent;
       transition: 0.2s all;
-      stroke: 4px solid $yellow;
+      stroke: 4px solid $accent;
     }
   }
 }
