--- a/source/_sass/_branding.scss
+++ b/source/_sass/_branding.scss
@@ -61,7 +61,7 @@
     display: inline-block;
 
     &:hover { color: rgba(white, 1); }
-    &.lang--active { color: rgba($yellow, 1); }
+    &.lang--active { color: rgba(white, 1); }
 
     @include breakpoint($medium-up) { 
       padding: 10px;
@@ -76,8 +76,19 @@
 
   @include breakpoint($medium-up) { margin-top: 8vw; }
 
+  h3, h4 {
+    line-height: 1.3;
+    margin-bottom: 20px !important;
+
+    > span { 
+      background-color: rgba($accent, .8); 
+      display: inline-block;
+      padding: 0 10px;
+    }
+  }
+
   h1 {
-    font-weight: 100;
+    font-weight: 200;
     font-size: 2.75rem;
     line-height: 1.2;
     margin: 0;
@@ -87,8 +98,10 @@
 
   h4 {
     @include breakpoint($medium-up) { 
-      font-size: 3rem; 
-      font-weight: 100;
+      font-size: 2.6rem; 
+      font-weight: 300;
+      text-transform: uppercase;
+      margin-top: 30px;
     }
     
     font-size: 1.4rem;
@@ -100,14 +113,16 @@
   h3 {
     margin: 0;
     font-size: 2rem;
-    font-weight: 100;
+    font-weight: 300;
   }
   
   &--small {
     margin-top: 10vh;  
     margin-bottom: 7vh;
 
-    @include breakpoint($medium-up) { margin-top: 0 }
+    @include breakpoint($medium-up) { 
+      margin-top: 5vh;
+    }
     
     h1 { 
       @include breakpoint($medium-up) { font-size: 5rem; }
