--- a/source/_sass/_partners.scss
+++ b/source/_sass/_partners.scss
@@ -1,14 +1,16 @@
 .partners {
+  text-align: center;
+  display: flex;
 
-  @include breakpoint($medium-up) {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    background-color: rgba(#0e0f13, .9);
-    max-width: 100%;
-    z-index: 3;
-  }
+  // @include breakpoint($medium-up) {
+  //   position: fixed;
+  //   bottom: 0;
+  //   right: 0;
+  //   left: 0;
+  //   background-color: rgba(#0e0f13, .9);
+  //   max-width: 100%;
+  //   z-index: 3;
+  // }
   
   h2 {
     @include breakpoint($medium-up) { display: none; }
@@ -19,12 +21,10 @@
     margin-bottom: 50px;
     
     @include breakpoint($medium-up) {
-      margin: 30px;
+      margin: 30px 20px;
       opacity: .6;
 
-      &:hover {
-        opacity: 1;
-      }
+      &:hover { opacity: 1; }
     }
     
     img { 
