--- a/source/_sass/main.scss
+++ b/source/_sass/main.scss
@@ -1,11 +1,14 @@
 body {
   background-color: #0e0f13;
+
 }
 
 main {
   color: white;
-  font-family: 'Plau', sans-serif;
+  font-family: 'proxima-nova', sans-serif;
 }
+
+
 
 a {
   text-decoration: none;
@@ -49,23 +52,3 @@ h2 {
   > * + * { margin-bottom: 10px; }
 }
 
-.button {
-  display: block;
-  border: 1px solid $blue;
-  margin-bottom: 10px;
-  padding: 7px;
-  text-align: center;
-  font-size: 1.3rem;
-  color: white;
-
-  @include breakpoint($medium-up) {
-    display: inline-block;
-    padding: 20px 30px;
-    margin: 10px;
-    font-size: 1.5rem;
-  }
-
-  &:hover {
-    background-color: rgba($blue, .2);
-  }
-}
