--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div class="bg" style="background-image: url(' {{"/images/bg.jpg" | relative_url }} ');"></div>
+    <div class="bg"></div>
     <div class="map">{% include map.html %}</div>
 
     <div class="wrapper header">
