--- a/source/_sass/_branding.scss
+++ b/source/_sass/_branding.scss
@@ -100,8 +100,11 @@
     @include breakpoint($medium-up) { 
       font-size: 2.6rem; 
       font-weight: 300;
-      text-transform: uppercase;
       margin-top: 30px;
+
+      > span {
+        text-transform: uppercase;
+      }
     }
     
     font-size: 1.4rem;
