--- a/source/_sass/main.scss
+++ b/source/_sass/main.scss
@@ -1,5 +1,6 @@
 body {
   background-color: #0e0f13;
+  //  to 3B88E4
 
 }
 
@@ -21,7 +22,7 @@ h2 {
 }
 
 .bg {
-  background-color: #0e0f13;
+  background-image: url(' {{"/images/bg.jpg" | relative_url }}'), linear-gradient(#25568F, #3B88E4);
   background-size: cover;
   background-position: center;
   width: 100vw;
