--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{page.lang}}">
   <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <title>{{page.title}}</title>
-    
+
     <link rel="stylesheet" href="{{ '/vendor/foundation.min.css' | relative_url}}">
     <link rel="stylesheet" href="{{ '/css/styles.css' | relative_url}}">
     <link rel="stylesheet" href="https://use.typekit.net/wax0qbs.css">
@@ -21,7 +21,7 @@
       <div class="logo">
         <a href="./"><img src="{{ '/images/logo-blue-white.png' | relative_url }}" alt="IODC18"></a>
       </div>
-      
+
       <div class="social-media">
         <a target="_blank" href="https://www.youtube.com/channel/UC8cKSDSxKSbOnKliM_MhZmQ"><img src="{{ '/images/youtube.png' | relative_url }}" alt="youtube icon"></a>
         <a target="_blank" href="https://www.facebook.com/opendatacon/"><img src="{{ '/images/facebook.png' | relative_url }}" alt="facebook icon"></a>
@@ -33,9 +33,9 @@
       </div>
 
     </div>
-      
+
     {{content}}
-    
+
     <div class="partners section">
       <h2>Partners</h2>
       <a href="#" class="partners__logo" target="_blank"><img class="partners--argentina" src="{{ '/images/argentina-government-logo.png' | relative_url }}" alt="Argentina Government"></a>
@@ -43,7 +43,7 @@
       <a href="http://www.worldbank.org/" class="partners__logo" target="_blank"><img class="partners--worldbank" src="{{ '/images/world-bank-logo.png' | relative_url }}" alt="World Bank"></a>
       <a href="http://od4d.net/" class="partners__logo" target="_blank"><img class="partners--od4d" src="{{ '/images/od4d-logo-white.png' | relative_url }}" alt="OD4D"></a>
     </div>
-    
+
     <div id="overlay" class="js-overlay"></div>
     <script src="{{'/vendor/jquery-2.1.4.min.js' | relative_url}}"></script>
     <script src="{{'/js/scripts.js' | relative_url}}"></script>
