--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -30,9 +30,9 @@
       </div>
       <div class="lang">
         {% if page.lang == 'en' %}
-            <a class="lang-en lang--active" href="#">EN</a> | <a class="lang-es" href="#">ES</a>
+            <a class="lang-en lang--active" href="#">EN</a> | <a class="lang-es" onclick="document.cookie='lang=es;path=/';window.location.reload()" href="#">ES</a>
         {% else %}
-            <a class="lang-en" href="#">EN</a> | <a class="lang-es lang--active" href="#">ES</a>
+            <a class="lang-en" onclick="document.cookie='lang=en;path=/';window.location.reload()" href="#">EN</a> | <a class="lang-es lang--active" href="#">ES</a>
         {% endif%}
       </div>
 
