--- a/source/_sass/_branding.scss
+++ b/source/_sass/_branding.scss
@@ -1,5 +1,5 @@
 .header {
-  display: flex; 
+  display: flex;
   flex-direction: column;
   padding-top: 5px;
 
@@ -7,12 +7,12 @@
   .social-media { order: 2; }
   .logo { order: 3; }
 
-  @include breakpoint($medium-up) { 
+  @include breakpoint($medium-up) {
     flex-direction: row;
     padding-top: 40px;
-    
-    .logo { 
-      flex: 1; 
+
+    .logo {
+      flex: 1;
       order: 1;
     }
     .social-media { order: 2; }
@@ -63,12 +63,12 @@
     &:hover { color: rgba(white, 1); }
     &.lang--active { color: rgba(white, 1); }
 
-    @include breakpoint($medium-up) { 
+    @include breakpoint($medium-up) {
       padding: 10px;
     }
   }
 }
-    
+
 
 .callout {
   margin-top: 5vh;
@@ -80,8 +80,8 @@
     line-height: 1.3;
     margin-bottom: 20px !important;
 
-    > span { 
-      background-color: rgba($accent, .8); 
+    > span {
+      background-color: rgba($accent, .8);
       display: inline-block;
       padding: 0 10px;
     }
@@ -93,12 +93,15 @@
     line-height: 1.2;
     margin: 0;
 
-    @include breakpoint($medium-up) { font-size: 8rem; }
+    @include breakpoint($medium-up) {
+        font-size: 8rem;
+        font-weight: 100;
+    }
   }
 
   h4 {
-    @include breakpoint($medium-up) { 
-      font-size: 2.6rem; 
+    @include breakpoint($medium-up) {
+      font-size: 2.6rem;
       font-weight: 300;
       margin-top: 30px;
 
@@ -106,7 +109,7 @@
         text-transform: uppercase;
       }
     }
-    
+
     font-size: 1.4rem;
     font-weight: 300;
     margin: 0;
@@ -118,16 +121,16 @@
     font-size: 2rem;
     font-weight: 300;
   }
-  
+
   &--small {
-    margin-top: 10vh;  
+    margin-top: 10vh;
     margin-bottom: 7vh;
 
-    @include breakpoint($medium-up) { 
+    @include breakpoint($medium-up) {
       margin-top: 5vh;
     }
-    
-    h1 { 
+
+    h1 {
       @include breakpoint($medium-up) { font-size: 5rem; }
     }
   }
