--- a/source/_sass/_map.scss
+++ b/source/_sass/_map.scss
@@ -1,5 +1,5 @@
 .map {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: absolute;
   @include breakpoint($medium-up) { top: 9vw; }
@@ -7,18 +7,18 @@
   left: 0;
   z-index: -1;
   text-align: center;
-  
+
   svg {
     width: 100%;
     @include breakpoint($medium-up) { width: 60%; }
 
-    path { 
+    path {
       fill: rgba(white, .05);
       transition: 1.5s all;
     }
-    
+
     .js-map--on,
-    path:hover { 
+    path:hover {
       fill: $accent;
       transition: 0.2s all;
       stroke: 4px solid $accent;
