--- a/source/_sass/_branding.scss
+++ b/source/_sass/_branding.scss
@@ -46,6 +46,8 @@
     transition: 0.5s opacity;
   }
 
+  &__email img { padding: 5px; }
+
   a:hover img { opacity: 1; }
 }
 
@@ -92,6 +94,7 @@
     font-size: 2.75rem;
     line-height: 1.2;
     margin: 0;
+    margin-bottom: 30px;
 
     @include breakpoint($medium-up) {
         font-size: 8rem;
@@ -133,5 +136,25 @@
     h1 {
       @include breakpoint($medium-up) { font-size: 5rem; }
     }
+  }
+}
+
+.back-button {
+  @include breakpoint($small-only) { text-align: center; }
+  @include breakpoint($medium-up) { margin-left: 40px; }
+  margin-top: 30px;
+  
+  &__button {
+    color: white;
+    font-size: 1.2rem;
+    font-family: 'proxima-nova', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+
+  .material-icons {
+    vertical-align: middle;
+    margin-right: 10px;
+    margin-bottom: 2px;
   }
 }
