text updates from client

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -51,7 +51,7 @@
         {% if page.lang == 'en' %}
           <a href="./" class="back-button__button"><i class="material-icons">arrow_back</i>Back</a>
         {% else %}
-          <a href="./" class="back-button__button"><i class="material-icons">arrow_back</i>Voltar</a>
+          <a href="./" class="back-button__button"><i class="material-icons">arrow_back</i>Volver</a>
         {% endif %}
       {% endif %}
     </div>
