--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -68,5 +68,15 @@
     <div id="overlay" class="js-overlay"></div>
     <script src="{{'/vendor/jquery-2.1.4.min.js' | relative_url}}"></script>
     <script src="{{'/js/scripts.js' | relative_url}}"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114213094-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-114213094-1');
+    </script>
+
   </body>
 </html>
