Update email address

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -34,7 +34,7 @@
         <a target="_blank" href="https://www.facebook.com/opendatacon/"><img src="{{ '/images/facebook.png' | relative_url }}" alt="facebook icon"></a>
         <a target="_blank" href="https://twitter.com/opendatacon"><img src="{{ '/images/twitter.png' | relative_url }}" alt="twitter icon"></a>
         <a target="_blank" href="https://www.flickr.com/photos/144810968@N02/albums"><img src="{{ '/images/flickr.png' | relative_url }}" alt="flickr icon"></a>
-        <a  class="social-media__email" target="_blank" href="mailto:info@opendatacon.org"><img src="{{ '/images/mail.png' | relative_url }}" alt="email icon"></a>
+        <a target="_blank" href="mailto:contact@opendatacon.org" class="social-media__email"><img src="{{ '/images/mail.png' | relative_url }}" alt="email icon"></a>
       </div>
       <div class="lang">
         {% if page.lang == 'en' %}
