--- a/source/_sass/_form.scss
+++ b/source/_sass/_form.scss
@@ -1,41 +1,182 @@
-.form {
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
+.form--google.form--google.form--google.form--google.form--google.form--google.form--google.form--google.form--google.form--google.form--google.form--google {
+  max-width: 700px;
+  margin: 0 auto;
   text-align: left;
+  font-size: 1.2rem;
 
-  @include breakpoint($medium-up) { 
-    max-width: 900px; 
-    margin-left: auto;
-    margin-right: auto;
+  ol, ul, li { list-style-type: none; }
+  
+  .ss-form-entry {
+    margin-bottom: 30px;
   }
 
-  label { 
-    font-size: 1.2rem; 
-    display: block;
+  .ss-q-title {
+    > label { display: inline; }
   }
 
-  label + label { padding-top: 20px; }
+  .ss-choices[role="radiogroup"] {
+    padding: 0;
+    cursor: pointer;
+
+    .ss-choice-item {
+      margin: 5px 5px 5px 0;
+      padding: 8px 10px;
+      border: 1px solid rgba(white, .3);
+      cursor: pointer;
+
+      * {
+        cursor: pointer;
+      }
+
+      @include breakpoint(780px) { 
+        width: calc(50% - 10px); 
+        display: inline-block;
+      }
+      
+      input[type="radio"],
+      input[type="checkbox"] { 
+        cursor: pointer;
+        display: inline-block; 
+        margin-right: 15px;
+        visibility: hidden;
+
+      }
+
+      input[type="checkbox"]:before,
+      input[type="radio"]:before {
+        @extend .u-material-icons;
+        visibility: visible;
+        margin-top: -4px;
+      }   
+
+      input[type="radio"]:before { content: 'radio_button_unchecked'; }
+      input[type="radio"]:checked:before { content: 'radio_button_checked'; }
+      input[type="checkbox"]:before { content: 'check_box_outline_blank'; }
+      input[type="checkbox"]:checked:before { content: 'check_box'; }
+    }
+  }
 
   input[type="text"],
   input[type="email"],
   input[type="password"],
   textarea {
+    margin-bottom: 2px;
     background-color: transparent;
-    webkit-appearance: none;
-    border-radius: 0;
+    border: 1px solid rgba(white, .3);
+    text-align: left;
     width: 100%;
-    border: 1px solid rgba(white, .5);
-    padding: 10px;
+    padding: 10px 15px;
+    @extend .u-transition;
+
+    &:focus {
+      border-color: white;
+    } 
   }
 
-  input:focus,
-  select:focus,
-  textarea:focus,
-  button:focus {
-    webkit-appearance: none;
-    outline: 0;
-    border-color: $yellow;
+  .required-message {
+    font-size: .8rem;
+    font-style: italic;
+    text-align: right;
   }
 
-  textarea {
-    min-height: 200px;
+  .goog-inline-block {
+    display: inline-block;
   }
+
+  .ss-q-other-container { 
+    margin: 0 0 0 4px;
+    padding: 0;
+    input { border-width: 0 0 1px 0; }
+  }
+
+  .tracks-question, .big-picture-items, .action-items, .impact-items, .format-question {
+    .ss-choice-item {
+      @include breakpoint(780px) { 
+        width: calc(100% - 10px) !important; 
+        display: block;
+      }
+    }
+  }  
+
+  .big-picture-items,
+  .action-items,
+  .impact-items {
+    display: none;
+
+    &.js-active {
+      display: block;
+    }
+
+    .ss-q-title {
+      font-size: 1.8rem;
+      text-transform: uppercase;
+      font-weight: 600;
+    }
+  }
+
+  
+  #ss-submit {
+    @extend .button;
+    background-color: transparent;
+  }
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  // .checkbox,
+  // .radio {
+  //     padding:7px 10px;
+  //     margin-bottom: 10px;
+
+  //     input[type="checkbox"] + label:before,
+  //     input[type="radio"] + label:before {
+  //         vertical-align: -6px;
+  //         margin-right: 15px;
+  //     }
+
+  //     input[type="checkbox"] + label:before {
+  //         @extend .u-material-icons;
+  //         content: 'check_box_outline_blank';
+  //     }
+
+  //     input[type="checkbox"]:checked + label:before {
+  //         @extend .u-material-icons;
+  //         content: 'check_box';
+  //     }
+
+  //     input[type="radio"] + label:before {
+  //         @extend .u-material-icons;
+  //         content: 'radio_button_unchecked';
+  //     }
+
+  //     input[type="radio"]:checked + label:before {
+  //         @extend .u-material-icons;
+  //         content: 'radio_button_checked';
+  //     }
+  // }
 }
