--- a/source/_sass/_form.scss
+++ b/source/_sass/_form.scss
@@ -12,7 +12,7 @@ button:focus {
   font-size: 1.2rem;
 
   ol, ul, li { list-style-type: none; }
-  
+
   .ss-form-entry {
     margin-bottom: 30px;
   }
@@ -35,18 +35,17 @@ button:focus {
         cursor: pointer;
       }
 
-      @include breakpoint(780px) { 
-        width: calc(50% - 10px); 
+      @include breakpoint(780px) {
+        width: calc(50% - 10px);
         display: inline-block;
       }
-      
-      input[type="radio"],
-      input[type="checkbox"] { 
-        cursor: pointer;
-        display: inline-block; 
-        margin-right: 15px;
-        visibility: hidden;
 
+      input[type="radio"],
+      input[type="checkbox"] {
+        cursor: pointer;
+        display: inline-block;
+        margin-right: 15px;
+        // visibility: hidden;
       }
 
       input[type="checkbox"]:before,
@@ -54,7 +53,7 @@ button:focus {
         @extend .u-material-icons;
         visibility: visible;
         margin-top: -4px;
-      }   
+      }
 
       input[type="radio"]:before { content: 'radio_button_unchecked'; }
       input[type="radio"]:checked:before { content: 'radio_button_checked'; }
@@ -77,7 +76,7 @@ button:focus {
 
     &:focus {
       border-color: white;
-    } 
+    }
   }
 
   .required-message {
@@ -90,7 +89,7 @@ button:focus {
     display: inline-block;
   }
 
-  .ss-q-other-container { 
+  .ss-q-other-container {
     margin: 0 0 0 4px;
     padding: 0;
     input { border-width: 0 0 1px 0; }
@@ -98,12 +97,12 @@ button:focus {
 
   .tracks-question, .big-picture-items, .action-items, .impact-items, .format-question {
     .ss-choice-item {
-      @include breakpoint(780px) { 
-        width: calc(100% - 10px) !important; 
+      @include breakpoint(780px) {
+        width: calc(100% - 10px) !important;
         display: block;
       }
     }
-  }  
+  }
 
   .big-picture-items,
   .action-items,
@@ -121,12 +120,12 @@ button:focus {
     }
   }
 
-  
+
   #ss-submit {
     @extend .button;
     background-color: transparent;
   }
-  
+
 
 
 
