--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -60,7 +60,7 @@
 
     <div class="partners section">
       <a href="#" class="partners__logo" target="_blank"><img class="partners--argentina" src="{{ '/images/argentina-government-logo.png' | relative_url }}" alt="Argentina Government"></a>
-      <a href="https://www.idrc.ca/" class="partners__logo" target="_blank"><img class="partners--idrc" src="{{ '/images/idrc-logo.png' | relative_url }}" alt="IDRC"></a>
+      <a href="https://www.idrc.ca/" class="partners__logo" target="_blank"><img class="partners--idrc" src="{{ '/images/idrc-logo-v2.png' | relative_url }}" alt="IDRC"></a>
       <a href="http://www.worldbank.org/" class="partners__logo" target="_blank"><img class="partners--worldbank" src="{{ '/images/world-bank-logo.png' | relative_url }}" alt="World Bank"></a>
       <a href="http://od4d.net/" class="partners__logo" target="_blank"><img class="partners--od4d" src="{{ '/images/od4d-logo-white.png' | relative_url }}" alt="OD4D"></a>
     </div>
